# mpsfm

./: README.md  pyproject.toml  reconstruct.py  requirements.txt
configs/: sp-lg_mogev2.yaml  sp-mast3r_mogev2.yaml  sp_sky-lg_m3dv2.yaml
configs/defaults/: mogev2.yaml
mpsfm/data_proc/: __init__.py  simple.py
mpsfm/extraction/: base.py
mpsfm/extraction/imagewise/geometry/models/configs/: mogev2.yaml
mpsfm/extraction/imagewise/geometry/models/depth/: mogev2.py
mpsfm/extraction/pairwise/models/: mast3r.py
mpsfm/sfm/: reconstruction_manager.py
mpsfm/sfm/mapper/: __init__.py  base.py
mpsfm/sfm/scene/correspondences/: base.py
mpsfm/sfm/scene/image/: base.py  normals.py
mpsfm/sfm/scene/reconstruction/: base.py
mpsfm/sfm/scene/reconstruction/mixins/: init_utils.py
mpsfm/test/: basetest.py  simple.py
